testsuite/tests/properties/invalid_node_builder/bad_generic_arity.lkt
import common_empty

class Example: BaseExample {
    fun f(): NodeBuilder[FooNode, FooNode] = EmptyNode.builder()
}
